// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`patterns Renders \`patterns\` with patterns 1`] = `
<patterns-list-stub
  options="[object Object]"
  patterns="[object Object]"
  totalitems="1"
/>
`;

exports[`patterns Renders \`patterns\` without patterns 1`] = `
<patterns-list-stub
  options="[object Object]"
  patterns=""
  totalitems="0"
/>
`;
